Endrer fra multimodul til enkeltmodul, siden kontrakten er flyttet til dp-kontrakter